# traffic_main

./: pyproject.toml
src/core/domain/value_objects/: __init__.py  bounding_box.py
src/core/shared/: errors.py
src/detection_platform/application/services/: detection_service.py
src/detection_platform/infrastructure/adapters/detection/: mappers.py  yolo_adapter.py
src/detection_platform/presentation/cli/: main.py
src/shared_kernel/: __init__.py  exceptions.py  result.py  result_monad.py
src/shared_kernel/detection_core/domain/: detection.py
src/shared_kernel/detection_core/ports/: detector_port.py
src/shared_kernel/semantic_model/: labels.py
src/shared_kernel/value_objects/: __init__.py  bounding_box.py  point.py  velocity.py
tests/: test_bounding_boxed.py
tests/unit/shared_kernel/: test_result.py
tests/unit/shared_kernel/value_objects/: test_bounding_box.py  test_point.py  test_velocity.py
