[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detection-platform"
version = "0.1.0"
description = "Detection platform for traffic management"
authors = [
    {name = "Wojciech Bulcewicz", email = "bulcewiczwojciech@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    # Core dependencies (minimal for domain layer)
]

[project.optional-dependencies]
# ML/CV stack
ml = [
    "ultralytics",
    "opencv-python",
    "numpy",
    ]

# Infrastructure
infra = []

# CLI
CLI = []

api = []

dev = [
    "pytest",
    "mypy",
    "ruff",
]

all = [
    "detection-platform[ml, infra, CLI, api, dev]",
]

[project.scripts]
detect = "detection_platform.presentation.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/detection_platform"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/config",
]

###
### PYTEST
###
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

###
### MYPY
###
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "ultralytics.*",
    "cv2.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

###
### RUFF
###
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

# Linting configuration for Ruff
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments (we use dataclasses)
    "PLR2004",  # Magic value comparison (ok in tests)
]

###
### Coverage
###
[tool.coverage.run]
source = ["src/detection_platform"]
branch = true
omit = ["*/presentation/*",
        "*/__main__.py",
        ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    ]
fail_under = 90
show_missing = true